--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,24 +8,29 @@
     tools:context=".MainActivity">
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="微信登录"
         android:id="@+id/weixin_login_btn"
-        android:layout_gravity="center"/>
-
-    <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="退出登录"
+        android:layout_gravity="center"
+        android:text="微信登录" />
+
+    <Button
         android:id="@+id/logout_btn"
-        android:layout_gravity="center"/>
-
-    <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="刷新Token"
-        android:id="@+id/refresh_btn"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:text="退出登录" />
 
+    <Button
+        android:id="@+id/refresh_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="刷新Token" />
+
+
+
+    <include
+        android:id="@+id/tel_layout"
+        layout="@layout/layout_tel" />
 </LinearLayout>
