--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,12 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="刷新Token" />
+    <Button
+        android:id="@+id/refresh_sync_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="刷新Token(同步)" />
 
     <Button
         android:id="@+id/user_btn"
